# sophiaRobot

./: README.md
ESP32-S3-BOX-3/: CMakeLists.txt  Getting Started with ESP32-S3-BOX-3.url  Makefile  ReleaseNotes for ESP32-S3-BOX-3.url  partitions.csv  sdkconfig.defaults
ESP32-S3-BOX-3/main/: CMakeLists.txt  ReadMe.txt  idf_component.yml
ESP32-S3-BOX-3/main/Application/GeneratedCode/: Application.c  Application.h  Core.c  Core.h  Effects.c  Effects.h  Graphics.c  Graphics.h  Resources.c  Resources.h  Views.c  Views.h  _ApplicationApplication.h  _ApplicationFontLarge.h  _ApplicationFontSmall.h  _ApplicationLogo.h  _CoreCursorEvent.h  _CoreCursorGrabEvent.h  _CoreCursorHit.h  _CoreDragEvent.h  _CoreEvent.h  _CoreGroup.h  _CoreKeyEvent.h  _CoreKeyPressHandler.h  _CoreLayoutContext.h  _CoreLayoutQuadContext.h  _CoreOutline.h  _CoreQuadView.h  _CoreRectView.h  _CoreResource.h  _CoreRoot.h  _CoreSimpleTouchHandler.h  _CoreTimer.h  _CoreView.h  _EffectsEffectTimerClass.h  _GraphicsCanvas.h  _ResourcesBitmap.h  _ResourcesFont.h  _ViewsImage.h  _ViewsRectangle.h  (+6 more)
ESP32-S3-BOX-3/main/Application/Source/: DeviceDriver.c  DeviceDriver.h  ewconfig.h  ewdef.h  ewmain.c  ewmain.h  main.c
ESP32-S3-BOX-3/main/Examples/320x240/AnimatedList/: AnimatedList.ewp  AnimatedList.ews  AnimatedList.ewu  Application.ewu
ESP32-S3-BOX-3/main/Examples/320x240/BrickGame/: Application.ewu  BrickGame.ewp  BrickGame.ews  BrickGame.ewu
ESP32-S3-BOX-3/main/Examples/320x240/ClimateCabinet/: Application.ewu  Climate.ewu  ClimateCabinet.ewp  ClimateCabinet.ews
ESP32-S3-BOX-3/main/Examples/320x240/ColorFormats/: Application.ewu  ColorFormats.ewp  ColorFormats.ews
ESP32-S3-BOX-3/main/Examples/320x240/DeviceIntegration/: Application.ewu  DeviceIntegration.ewp  DeviceIntegration.ews
ESP32-S3-BOX-3/main/Examples/320x240/GraphicsAccelerator/: Accelerator.ewu  Application.ewu  GraphicsAccelerator.ewp  GraphicsAccelerator.ews  GraphicsSystem.ewu
ESP32-S3-BOX-3/main/Examples/320x240/HelloWorld/: Application.ewu  HelloWorld.ewp  HelloWorld.ews
ESP32-S3-BOX-3/main/Examples/320x240/ScreenOrientation/: Application.ewu  ScreenOrientation.ewp  ScreenOrientation.ews
ESP32-S3-BOX-3/main/Examples/320x240/WaveformGenerator/: Application.ewu  Waveform.ewu  WaveformGenerator.ewp  WaveformGenerator.ews
ESP32-S3-BOX-3/main/PlatformPackage/: License.txt  ReadMe.txt
ESP32-S3-BOX-3/main/PlatformPackage/Index8/: ewextbmp.h  ewextfnt.h  ewextgfx.c  ewextgfx.h  ewgfx.h
ESP32-S3-BOX-3/main/PlatformPackage/LumA44/: ewextgfx.c  ewextgfx.h  ewgfx.cmake  ewgfxcore.h  ewgfxdefs.h  ewgfxdriver.h  ewgfxlinks.h  ewgfxres.h  ewgfxtasks.h
ESP32-S3-BOX-3/main/PlatformPackage/RGB565/: ewextgfx.c  ewextgfx.h
ESP32-S3-BOX-3/main/PlatformPackage/RTE/: ewextrte.c  ewextrte.h  ewrte.cmake  ewrte.h
ESP32-S3-BOX-3/main/TargetSpecific/: ew_bsp_clock.c  ew_bsp_clock.h  ew_bsp_display.c  ew_bsp_display.h  ew_bsp_event.c  ew_bsp_event.h  ew_bsp_inout.c  ew_bsp_inout.h  ew_bsp_os.c  ew_bsp_os.h  ew_bsp_system.c  ew_bsp_touch.c  ew_bsp_touch.h
examples/factory_demo/main/: main.c  settings.c
examples/factory_demo/main/app/: app_sr.c
examples/factory_demo/main/gui/: ui_main.c
